--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,8 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Lucida Console', 'Monaco', monospace;
+  padding: 5px;
+  margin: 5px;
+  background-color: lightgray;
 }
 
 a {
@@ -21,4 +24,15 @@ form div {
 }
 .headerText {
   text-align: center;
+}
+
+.single-card {
+  background-color: blueviolet;
+}
+
+.imageSize {
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  display: block;
 }
