--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Lucida Console', 'Monaco', monospace;
+  /* font-family: 'Lucida Console', 'Monaco', monospace; */
+  font-family: 'Signika', sans-serif;
   padding: 5px;
   margin: 5px;
   background-color: lightgray;
@@ -35,4 +36,8 @@ form div {
   margin-right: auto;
   width: 20%;
   display: block;
+}
+
+.listSize {
+  font-size: 20px;
 }
